Fixes the card alignment

--- a/studies/central_card/style.css
+++ b/studies/central_card/style.css
@@ -1,6 +1,6 @@
 :root {
-  --clr-neutral-100: hsl(0deg 0% 100%);
   --clr-neutral-200: hsl(212deg 45% 89%);
+  --clr-neutral-100: hsl(0deg 0% 100%);
 }
 
 /* Reset */
@@ -26,15 +26,14 @@ body {
 
 body {
   display: grid;
-  place-content: center;
-  margin: 2rem;
+  place-items: center;
   background-color: var(--clr-neutral-200);
 }
 
 .card {
   max-width: 20rem;
   padding: 1rem;
-  margin: auto;
+  margin: 2rem;
   border-radius: 1.375rem;
   background-color: var(--clr-neutral-100);
 }
